fix(search): search icons position error on Safari Mobile

--- a/assets/css/_partial/_header.scss
+++ b/assets/css/_partial/_header.scss
@@ -281,6 +281,10 @@ header {
         }
       }
 
+      .search-button {
+        top: 0;
+      }
+
       .search-cancel {
         display: none;
         margin-left: .75rem;
